--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,19 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ARENAv2
 endorsed.classpath=
 excludes=
-file.reference.derby.jar=lib\\derby.jar
-file.reference.derbyclient.jar=lib\\derbyclient.jar
-file.reference.derbynet.jar=lib\\derbynet.jar
-file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
 file.reference.junit-4.13.2.jar=lib\\junit-4.13.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.derby.jar}:\
-    ${file.reference.derbyclient.jar}:\
-    ${file.reference.derbynet.jar}:\
-    ${file.reference.hamcrest-core-1.3.jar}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
