--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ARENAv2
 endorsed.classpath=
 excludes=
+file.reference.apiguardian-api-1.1.2.jar=C:\\Users\\Fynn\\Downloads\\apiguardian-api-1.1.2.jar
 file.reference.derby.jar=lib/derby.jar
 file.reference.derbyclient.jar=lib/derbyclient.jar
 file.reference.derbynet.jar=lib/derbynet.jar
 file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
 file.reference.junit-4.13.2.jar=lib/junit-4.13.2.jar
+file.reference.junit-platform-launcher-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-launcher-1.10.3.jar
+file.reference.junit-platform-suite-api-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-suite-api-1.10.3.jar
+file.reference.junit-platform-suite-engine-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-suite-engine-1.10.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -60,7 +64,13 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
-    ${file.reference.junit-4.13.2.jar}
+    ${file.reference.junit-4.13.2.jar}:\
+    ${libs.testng.classpath}:\
+    ${libs.junit_5.classpath}:\
+    ${file.reference.junit-platform-suite-api-1.10.3.jar}:\
+    ${file.reference.junit-platform-suite-engine-1.10.3.jar}:\
+    ${file.reference.junit-platform-launcher-1.10.3.jar}:\
+    ${file.reference.apiguardian-api-1.1.2.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
