--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,10 +40,16 @@ file.reference.derby.jar=lib/derby.jar
 file.reference.derbyclient.jar=lib/derbyclient.jar
 file.reference.derbynet.jar=lib/derbynet.jar
 file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
+file.reference.jcommander-1.78.jar=lib\\jcommander-1.78.jar
 file.reference.junit-4.13.2.jar=lib/junit-4.13.2.jar
+file.reference.junit-jupiter-api-5.10.3.jar=lib\\junit-jupiter-api-5.10.3.jar
+file.reference.junit-jupiter-engine-5.10.3.jar=lib\\junit-jupiter-engine-5.10.3.jar
+file.reference.junit-jupiter-params-5.10.3.jar=lib\\junit-jupiter-params-5.10.3.jar
+file.reference.junit-platform-console-standalone-1.10.3.jar=lib\\junit-platform-console-standalone-1.10.3.jar
 file.reference.junit-platform-launcher-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-launcher-1.10.3.jar
 file.reference.junit-platform-suite-api-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-suite-api-1.10.3.jar
 file.reference.junit-platform-suite-engine-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-suite-engine-1.10.3.jar
+file.reference.testng-6.14.3.jar=lib\\testng-6.14.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -68,7 +74,13 @@ javac.test.classpath=\
     ${file.reference.junit-platform-suite-api-1.10.3.jar}:\
     ${file.reference.junit-platform-suite-engine-1.10.3.jar}:\
     ${file.reference.junit-platform-launcher-1.10.3.jar}:\
-    ${file.reference.apiguardian-api-1.1.2.jar}
+    ${file.reference.apiguardian-api-1.1.2.jar}:\
+    ${file.reference.jcommander-1.78.jar}:\
+    ${file.reference.junit-jupiter-api-5.10.3.jar}:\
+    ${file.reference.junit-jupiter-engine-5.10.3.jar}:\
+    ${file.reference.junit-jupiter-params-5.10.3.jar}:\
+    ${file.reference.junit-platform-console-standalone-1.10.3.jar}:\
+    ${file.reference.testng-6.14.3.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
