--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,8 +47,12 @@ file.reference.junit-jupiter-engine-5.10.3.jar=lib\\junit-jupiter-engine-5.10.3.
 file.reference.junit-jupiter-params-5.10.3.jar=lib\\junit-jupiter-params-5.10.3.jar
 file.reference.junit-platform-console-standalone-1.10.3.jar=lib\\junit-platform-console-standalone-1.10.3.jar
 file.reference.junit-platform-launcher-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-launcher-1.10.3.jar
+file.reference.junit-platform-launcher-1.10.3.jar-1=lib\\junit-platform-launcher-1.10.3.jar
 file.reference.junit-platform-suite-api-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-suite-api-1.10.3.jar
+file.reference.junit-platform-suite-api-1.10.3.jar-1=lib\\junit-platform-suite-api-1.10.3.jar
 file.reference.junit-platform-suite-engine-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-suite-engine-1.10.3.jar
+file.reference.junit-platform-suite-engine-1.10.3.jar-1=lib\\junit-platform-suite-engine-1.10.3.jar
+file.reference.org.apiguardian.api_1.1.2.jar=lib\\org.apiguardian.api_1.1.2.jar
 file.reference.testng-6.14.3.jar=lib\\testng-6.14.3.jar
 includes=**
 jar.compress=false
@@ -80,7 +84,11 @@ javac.test.classpath=\
     ${file.reference.junit-jupiter-engine-5.10.3.jar}:\
     ${file.reference.junit-jupiter-params-5.10.3.jar}:\
     ${file.reference.junit-platform-console-standalone-1.10.3.jar}:\
-    ${file.reference.testng-6.14.3.jar}
+    ${file.reference.testng-6.14.3.jar}:\
+    ${file.reference.org.apiguardian.api_1.1.2.jar}:\
+    ${file.reference.junit-platform-suite-engine-1.10.3.jar-1}:\
+    ${file.reference.junit-platform-suite-api-1.10.3.jar-1}:\
+    ${file.reference.junit-platform-launcher-1.10.3.jar-1}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
