fixed text size on battleframe

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ARENAv2
 endorsed.classpath=
 excludes=
-file.reference.apiguardian-api-1.1.2.jar=C:\\Users\\Fynn\\Downloads\\apiguardian-api-1.1.2.jar
+file.reference.apiguardian-api-1.1.2.jar=..\\..\\..\\..\\..\\Downloads\\ARENAv2-master\\lib\\apiguardian-api-1.1.2.jar
 file.reference.derby.jar=lib/derby.jar
 file.reference.derbyclient.jar=lib/derbyclient.jar
 file.reference.derbynet.jar=lib/derbynet.jar
@@ -46,11 +46,11 @@ file.reference.junit-jupiter-api-5.10.3.jar=lib\\junit-jupiter-api-5.10.3.jar
 file.reference.junit-jupiter-engine-5.10.3.jar=lib\\junit-jupiter-engine-5.10.3.jar
 file.reference.junit-jupiter-params-5.10.3.jar=lib\\junit-jupiter-params-5.10.3.jar
 file.reference.junit-platform-console-standalone-1.10.3.jar=lib\\junit-platform-console-standalone-1.10.3.jar
-file.reference.junit-platform-launcher-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-launcher-1.10.3.jar
+file.reference.junit-platform-launcher-1.10.3.jar=..\\..\\..\\..\\..\\Downloads\\ARENAv2-master\\lib\\junit-platform-launcher-1.10.3.jar
 file.reference.junit-platform-launcher-1.10.3.jar-1=lib\\junit-platform-launcher-1.10.3.jar
-file.reference.junit-platform-suite-api-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-suite-api-1.10.3.jar
+file.reference.junit-platform-suite-api-1.10.3.jar=..\\..\\..\\..\\..\\Downloads\\ARENAv2-master\\lib\\junit-platform-suite-api-1.10.3.jar
 file.reference.junit-platform-suite-api-1.10.3.jar-1=lib\\junit-platform-suite-api-1.10.3.jar
-file.reference.junit-platform-suite-engine-1.10.3.jar=C:\\Users\\Fynn\\Downloads\\junit-platform-suite-engine-1.10.3.jar
+file.reference.junit-platform-suite-engine-1.10.3.jar=..\\..\\..\\..\\..\\Downloads\\ARENAv2-master\\lib\\junit-platform-suite-engine-1.10.3.jar
 file.reference.junit-platform-suite-engine-1.10.3.jar-1=lib\\junit-platform-suite-engine-1.10.3.jar
 file.reference.org.apiguardian.api_1.1.2.jar=lib\\org.apiguardian.api_1.1.2.jar
 file.reference.testng-6.14.3.jar=lib\\testng-6.14.3.jar
@@ -75,10 +75,6 @@ javac.test.classpath=\
     ${build.classes.dir}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
     ${file.reference.junit-4.13.2.jar}:\
-    ${file.reference.junit-platform-suite-api-1.10.3.jar}:\
-    ${file.reference.junit-platform-suite-engine-1.10.3.jar}:\
-    ${file.reference.junit-platform-launcher-1.10.3.jar}:\
-    ${file.reference.apiguardian-api-1.1.2.jar}:\
     ${file.reference.jcommander-1.78.jar}:\
     ${file.reference.junit-jupiter-api-5.10.3.jar}:\
     ${file.reference.junit-jupiter-engine-5.10.3.jar}:\
@@ -88,7 +84,11 @@ javac.test.classpath=\
     ${file.reference.org.apiguardian.api_1.1.2.jar}:\
     ${file.reference.junit-platform-suite-engine-1.10.3.jar-1}:\
     ${file.reference.junit-platform-suite-api-1.10.3.jar-1}:\
-    ${file.reference.junit-platform-launcher-1.10.3.jar-1}
+    ${file.reference.junit-platform-launcher-1.10.3.jar-1}:\
+    ${file.reference.apiguardian-api-1.1.2.jar}:\
+    ${file.reference.junit-platform-suite-engine-1.10.3.jar}:\
+    ${file.reference.junit-platform-suite-api-1.10.3.jar}:\
+    ${file.reference.junit-platform-launcher-1.10.3.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
